# hardened_malloc-rs

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  LICENCE  LICENCE_GRAPHENEOS  README.md  build.rs  hardened_malloc_sources.txt  rustfmt.toml
src/: bindings.rs  hardened_malloc_bindings.rs  lib.rs
tests/: Cargo.toml
tests/src/: main.rs
