[package]
name = "hardened_malloc-rs"
description = "hardened_malloc rust wrapper"
authors = ["strawberry <strawberry@pupbrain.dev>"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 and MIT"
repository = "https://github.com/girlbossceo/hardened_malloc"
categories = ["api-bindings", "memory-management"]
keywords = ["hardened_malloc", "malloc", "hardened memory allocator", "security"]
readme = "README.md"

[features]
default = ["light", "clang"]

## compiler
clang = []
gcc = []

## hardened_malloc config

light = []
# "standard" feature is "default.mk" config in hardened_malloc
standard = []