[package]
name = "hardened_malloc-rs"
description = "hardened_malloc rust wrapper"
authors = ["strawberry <strawberry@puppygock.gay>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/girlbossceo/hardened_malloc-rs"
keywords = ["hardened_malloc", "malloc", "ffi", "security", "bindings"]
categories = ["api-bindings", "memory-management"]
readme = "README.md"

# everything after the '+' is the latest GrapheneOS hardened_malloc repo tag
version = "0.1.1+12"

# https://github.com/GrapheneOS/hardened_malloc?tab=readme-ov-file#dependencies
# Debian stable (currently Debian 12) determines the most ancient set of supported dependencies
#
# (Debian 12 has Rust 1.63.0)
rust-version = "1.63.0"

[features]
default = ["static", "gcc", "light"]

## compiler
clang = []
gcc = []

## linking method
dynamic = []
static = []

## hardened_malloc config
# "standard" feature is "default.mk" config in hardened_malloc
light = []
standard = []
